--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EssentialAllInOne">
         <activity
+            android:name=".activity.Cardinal"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Activate"
+            android:exported="false" />
+        <activity
+            android:name=".activity.Hanged"
+            android:exported="false" />
+        <activity
             android:name=".activity.Match"
             android:exported="false" />
         <activity
